@@ -99,4 +99,9 @@
     <mime-type>application/xslt+xml</mime-type>
   </mime-mapping>
 
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+
 </web-app>
